// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
Array [
  "r",
  "appConfig",
  "platform",
]
`;

exports[` 2`] = `
Array [
  "r",
  "appConfig",
  "category",
]
`;

exports[` 3`] = `
Array [
  "r",
  "appConfig",
  "value",
]
`;

exports[` 4`] = `
Array [
  "r",
  "billing",
  "plan",
]
`;

exports[` 5`] = `
Array [
  "r",
  "billing",
  "invoice",
  "collection",
]
`;

exports[` 6`] = `
Array [
  "r",
  "billing",
  "item",
  "collection",
]
`;

exports[` 7`] = `
Array [
  "r",
  "billing",
  "customer",
  "collection",
]
`;
